--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-ui": "^2.2.2",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
